syntax = "proto3";

import "scalapb/scalapb.proto";

package com.iac.soc.backend.api.common.messages;

message Organization{
    string name = 1;
    int32 id = 2;
}
message ActionPerformed {
    int32 statusCode = 1;
    string message = 2;
}