syntax = "proto3";

import "scalapb/scalapb.proto";

package com.iac.soc.backend.rules.messages;

option (scalapb.options) = {
    single_file: true
    flat_package: true
};

message Category {
    int32 id = 1;
    string name = 2;
}

message Organization {
    int32 id = 1;
    string name = 2;
}

message RestartShardOnNodeExit {
    string nodeName = 1;
}

message Severity {
    int32 id = 1;
    string name = 2;
}

message RuleCreated {
    int32 id = 1;
    string name = 2;
    bool isGlobal = 3;
    repeated Organization organizations = 4;
    string query = 5;
    string status = 6;
    repeated Category categories = 7;
    Severity severity = 8;
    string frequency = 9;
}

message RuleUpdated {
    int32 id = 1;
    string name = 2;
    bool isGlobal = 3;
    repeated Organization organizations = 4;
    string query = 5;
    string status = 6;
    repeated Category categories = 7;
    Severity severity = 8;
    string frequency = 9;
}

message RuleDeleted {
    int32 id = 1;
}

message RuleSchedule {}
